--- a/blog_app_frontend/src/index.css
+++ b/blog_app_frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-scrollbar::-webkit-scrollbar {
+    display: none;
+    /* Hides scrollbar for Chrome, Safari */
+}
